--- a/default.html
+++ b/default.html
@@ -51,7 +51,7 @@
     </header>
     <div id="particles-js"></div>
 
-    <section id="sobreSection" class="sobre">
+    <!-- <section id="sobreSection" class="sobre">
         <div class="container">
             <h2>Sobre a Empresa</h2>
             <div id="textSobre">
@@ -68,13 +68,13 @@
                     simples, facilitando a vida das pessoas, e assim obtendo um resultado com maior impacto.</p>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <div class="QuebraSecao">
+    <!-- <div class="QuebraSecao">
         <span></span>
-    </div>
+    </div> -->
 
-    <section id="solucoesSection" class="solucoes">
+    <!-- <section id="solucoesSection" class="solucoes">
         <div class="container">
             <h2>Soluções</h2>
             <div id="textSolucoes">
@@ -135,7 +135,7 @@
         <div class="container">
             <h4 id="h3kill">#KILLEXCELANDPAPER</h4>
         </div>
-    </section>
+    </section> -->
 
 
     <footer id="rodape">
@@ -143,7 +143,7 @@
             <a href="mailto:contato@highlightti.com.br?Subject=Contato%20Site">contato@highlightti.com.br</a>
         </div>
     </footer>
-    <div id="particles2-js"></div>
+    <!-- <div id="particles2-js"></div> -->
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
