--- a/default.html
+++ b/default.html
@@ -18,23 +18,23 @@
     <div class="menu">
         <ul class="medianav justify-content-center">
             <li class="nav-item linkimg">
-                <a class="nav-link active" href="#home">
+                <a class="nav-link" href="#home">
                     <div class="imagemMenu"> </div>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#sobreSection">
-                    <b>Sobre</b>
+                <a class="nav-link" href="#sobreSection">
+                    Sobre
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#solucoesSection">
-                    <b>Soluções</b>
+                    Soluções
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#rodape">
-                    <b>Contato</b>
+                    Contato
                 </a>
             </li>
         </ul>
