--- a/default.html
+++ b/default.html
@@ -51,6 +51,24 @@
     </header>
     <div id="particles-js"></div>
 
+    <section id="sobreSection" class="sobre">
+
+        <h2>A HIGHLIGHTTI</h2>
+
+        <div class="cardSobre">
+            <p class="cardSobre">
+                Fundada em 2018, foi criada com o objetivo de desenvolver soluções tecnológicas, para facilitar e otimizar de
+                forma efetiva, as necessidades das empresas em áreas importantes da tecnologia, áreas essas que estão sempre
+                em constante evolução, e assim necessitam das melhores ferramentas atuais, para alcançar o seus objetivos
+                e também o seu máximo potencial de mercado.
+            </p>
+        </div>
+
+    </section>
+
+    <section id="solucoesSection" class="solucoes">
+    </section>
+
     <!-- <section id="sobreSection" class="sobre">
         <div class="container">
             <h2>Sobre a Empresa</h2>
