--- a/default.html
+++ b/default.html
@@ -57,11 +57,22 @@
 
         <div class="cardSobre">
             <p class="cardSobre">
-                Fundada em 2018, foi criada com o objetivo de desenvolver soluções tecnológicas, para facilitar e otimizar de
-                forma efetiva, as necessidades das empresas em áreas importantes da tecnologia, áreas essas que estão sempre
-                em constante evolução, e assim necessitam das melhores ferramentas atuais, para alcançar o seus objetivos
-                e também o seu máximo potencial de mercado.
+                Fundada em 2018, foi criada com o objetivo de desenvolver soluções tecnológicas, para facilitar e otimizar de forma efetiva,
+                as necessidades das empresas em áreas importantes da tecnologia, áreas essas que estão sempre em constante
+                evolução, e assim necessitam das melhores ferramentas atuais, para alcançar o seus objetivos e também o seu
+                máximo potencial de mercado.
             </p>
+        </div>
+
+        <h2 id="h2Valor" >Valores</h2>
+
+        <div class="valor1">
+            <tag class="tag1"><h3>1</h3></tag>
+            <div class="tag2">
+                <tag >
+                    <h3>Inovação</h3>
+                </tag>
+            </div>
         </div>
 
     </section>
