--- a/default.html
+++ b/default.html
@@ -67,13 +67,25 @@
         <h2 id="h2Valor" >Valores</h2>
 
         <div class="valor1">
-            <tag class="tag1"><h3>1</h3></tag>
-            <div class="tag2">
+            <tag class="tag1Valor1"><h3>1</h3></tag>
+            <div class="tag2Valor1">
                 <tag >
                     <h3>Inovação</h3>
                 </tag>
             </div>
         </div>
+
+        <div class="valor2">
+                <tag class="tag1Valor2"><h3>2</h3></tag>
+                <div class="tag2Valor2">
+                    <tag >
+                        <h3>Qualidade</h3>
+                    </tag>
+                </div>
+            </div>
+
+
+        
 
     </section>
 
